deploy/friends-test-route.yaml
# Route for friends app
apiVersion: cloudstate.io/v1alpha1
kind: Route
metadata:
  name: "chat-routes"
spec:
  http:
  - name: "friends-routes"
    match:
    - uri:
       prefix: "/"
    route:
       service: friends
