deploy/gateway-istio.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: gateway
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: js-chat-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: js-chat
spec:
  hosts:
  - "*"
  gateways:
  - js-chat-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: gateway
